crates/cockpitctl-domain/tests/snapshots/snapshot_expansion_wave34__build_cockpit_report_multi_sensor.snap
---
source: crates/cockpitctl-domain/tests/snapshot_expansion_wave34.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "test",
    "version": "1.0.0"
  },
  "run": {
    "started_at": "2026-02-01T00:00:00Z"
  },
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 1,
      "warn": 3,
      "error": 2
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "builddiag",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/builddiag/report.json",
      "verdict": {
        "status": "fail",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 2
        },
        "reasons": []
      },
      "truncated": false,
      "errors": []
    },
    {
      "id": "clippy",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/clippy/report.json",
      "verdict": {
        "status": "warn",
        "counts": {
          "info": 1,
          "warn": 3,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": []
    },
    {
      "id": "coverage",
      "blocking": false,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/coverage/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": []
    }
  ],
  "highlights": [
    {
      "sensor_id": "builddiag",
      "finding": {
        "severity": "error",
        "code": "E0308",
        "message": "Message for E0308",
        "location": {
          "path": "src/main.rs",
          "line": 10
        }
      }
    },
    {
      "sensor_id": "clippy",
      "finding": {
        "severity": "warn",
        "code": "clippy::unwrap_used",
        "message": "Message for clippy::unwrap_used",
        "location": {
          "path": "src/lib.rs",
          "line": 22
        }
      }
    }
  ],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 5,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Build",
      "Lint"
    ],
    "sensors": [
      {
        "id": "builddiag",
        "blocking": true,
        "missing": "fail",
        "section": "Build",
        "repro": "cargo build"
      },
      {
        "id": "clippy",
        "blocking": true,
        "missing": "warn",
        "section": "Lint",
        "repro": "cargo clippy"
      },
      {
        "id": "coverage",
        "blocking": false,
        "missing": "skip"
      }
    ]
  }
}
