crates/cockpitctl-domain/tests/snapshots/snapshot_expansion_wave34__compute_counts_all_info.snap
---
source: crates/cockpitctl-domain/tests/snapshot_expansion_wave34.rs
expression: counts
---
{
  "info": 3,
  "warn": 0,
  "error": 0
}
