crates/cockpitctl-domain/tests/snapshots/snapshot_expansion_wave34__overall_verdict_five_sensor_mix.snap
---
source: crates/cockpitctl-domain/tests/snapshot_expansion_wave34.rs
expression: verdict
---
{
  "status": "fail",
  "counts": {
    "info": 0,
    "warn": 5,
    "error": 4
  },
  "reasons": []
}
