crates/cockpitctl-domain/tests/snapshots/snapshot_expansion_wave34__overall_verdict_warn_is_fail_mixed.snap
---
source: crates/cockpitctl-domain/tests/snapshot_expansion_wave34.rs
expression: verdict
---
{
  "status": "fail",
  "counts": {
    "info": 1,
    "warn": 3,
    "error": 0
  },
  "reasons": [
    "warn_is_fail"
  ]
}
